--- a/partials/home.html
+++ b/partials/home.html
@@ -5,6 +5,69 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="material-datatables">
+
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="row">
+                                        <div class="col-lg-8">
+                                            <div class="row">
+                                                <div class="col-lg-6">
+                                                    <div class="input-group add">
+                                                        <label for="Sdayhen">Từ Ngày</label>
+                                                        <input type="date" class="form-control" id="Sdayhen">
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-6">
+                                                    <div class="input-group add">
+                                                        <label for="Sdayhen2">Đến Ngày</label>
+                                                        <input type="date" class="form-control" id="Sdayhen2">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-lg-6">
+                                                    <div class="input-group add">
+                                                        <label for="giohen">Từ Giờ</label>
+                                                        <select class="form-control" ng-model="SselectedTime" ng-options="option.name for option in Appointment_time">
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-6">
+                                                    <div class="input-group add">
+                                                        <label for="giohen">Đến Giờ</label>
+                                                        <select class="form-control" ng-model="SselectedTime2" ng-options="option.name for option in Appointment_time">
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-4">
+                                            <div class="input-group add">
+                                                <label for="coso">Cơ sở</label>
+                                                <select class="form-control" ng-model="SselectedCenter" ng-change="searchCenter()" ng-options="option.name for option in Center">
+                                                </select>
+                                            </div>
+                                            <div class="input-group add">
+                                                <div class="row">
+                                                    <div class="col-lg-6">
+                                                        <a href="#" class="btn btn-info btn-block" style="margin-left: 20px" ng-click="Searchwith()">
+                                                            <i class="material-icons">search</i> Tìm Kiếm
+                                                        </a>
+                                                    </div>
+                                                    <div class="col-lg-6">
+                                                        <a href="#" class="btn btn-default btn-block" ng-click="Clear()">
+                                                            <i class="material-icons">clear_all</i> Clear
+                                                        </a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+
                             <table datatable="ng" dt-options="newdtOptions" dt-instance="dtInstance" cellpadding="0" class="table table-striped cell-border table-hover">
                                 <thead>
                                     <tr>
@@ -186,8 +249,8 @@
                                             Cập nhật
                                         </button> -->
                                         <div class="form-group">
-                                            <button class="btn btn-warning btn-block btn-lg" style="padding-left: 17px;" ng-disabled="_details.Status_student[0].id === 3" ng-click="up_detail()">Cập
-                                                Nhật
+                                            <button class="btn btn-warning btn-block btn-lg" style="padding-left: 17px;" ng-disabled="_details.Status_student[0].id === 3"
+                                                ng-click="up_detail()">Cập Nhật
                                             </button>
                                             <button class="btn btn-info btn-block">SMS</button>
                                             <button class="btn btn-info btn-block">Email</button>
@@ -207,11 +270,12 @@
                     </button>
                 </div>
                 <div class="col-4">
-                    <button type="button" class="btn btn-block btn-lg btn-success" ng-disabled="auth.Username !== _details.Manager[0].id  || _details.Status_student[0].id === 3" data-toggle="modal"
-                        data-target="#time">Gọi lại thời gian</button>
+                    <button type="button" class="btn btn-block btn-lg btn-success" ng-disabled="auth.Username !== _details.Manager[0].id  || _details.Status_student[0].id === 3"
+                        data-toggle="modal" data-target="#time">Gọi lại thời gian</button>
                 </div>
                 <div class="col-4">
-                    <button type="button" class="btn btn-block btn-lg btn-warning" ng-disabled="auth.Username !== _details.Manager[0].id  || _details.Status_student[0].id === 3" ng-click="recall()">Gọi lại sau</button>
+                    <button type="button" class="btn btn-block btn-lg btn-warning" ng-disabled="auth.Username !== _details.Manager[0].id  || _details.Status_student[0].id === 3"
+                        ng-click="recall()">Gọi lại sau</button>
                 </div>
             </div>
         </div>
@@ -255,8 +319,7 @@
 </div>
 
 <!-- Modal Thêm Học Viên header-->
-<div class="modal fade" id="add" tabindex="-1" role="dialog" data-backdrop="false" aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
+<div class="modal fade" id="add" tabindex="-1" role="dialog" data-backdrop="false" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-add m-3-top" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -548,8 +611,7 @@
 </div>
 
 <!-- Modal Thêm User -->
-<div class="modal fade" id="user" tabindex="-1" role="dialog" data-backdrop="false" aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
+<div class="modal fade" id="user" tabindex="-1" role="dialog" data-backdrop="false" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
