--- a/partials/setup.html
+++ b/partials/setup.html
@@ -18,7 +18,7 @@
                                 <td class="text-center">
                                     <div class="togglebutton">
                                         <label>
-                                            <input type="checkbox" ng-model="check" ng-checked="content.Status_user[0].id === 1" ng-change="ChangeStatus(content, check)">
+                                            <input type="checkbox" ng-model="check" ng-checked="content.Status_user[0].id === 1" ng-click="ChangeStatus(content, check)">
                                             <span class="toggle"></span>
                                         </label>
                                     </div>
