update home notcall search

--- a/partials/notcalled.html
+++ b/partials/notcalled.html
@@ -13,40 +13,19 @@
                                                     <div class="row">
                                                         <div class="col-lg-6">
                                                             <div class="input-group add">
-                                                                <label for="Sdayhen">Từ Ngày</label>
-                                                                <input type="date" class="form-control" id="Sdayhen">
+                                                                <label for="nregday">Từ Ngày</label>
+                                                                <input type="date" class="form-control" id="nregday">
                                                             </div>
                                                         </div>
                                                         <div class="col-lg-6">
                                                             <div class="input-group add">
-                                                                <label for="Sdayhen2">Đến Ngày</label>
-                                                                <input type="date" class="form-control" id="Sdayhen2">
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="row">
-                                                        <div class="col-lg-6">
-                                                            <div class="input-group add">
-                                                                <label for="giohen">Từ Giờ</label>
-                                                                <select class="form-control" ng-model="SselectedTime" ng-options="option.name for option in Appointment_time">
-                                                                </select>
-                                                            </div>
-                                                        </div>
-                                                        <div class="col-lg-6">
-                                                            <div class="input-group add">
-                                                                <label for="giohen">Đến Giờ</label>
-                                                                <select class="form-control" ng-model="SselectedTime2" ng-options="option.name for option in Appointment_time">
-                                                                </select>
+                                                                <label for="nregday">Đến Ngày</label>
+                                                                <input type="date" class="form-control" id="nregday2">
                                                             </div>
                                                         </div>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-4">
-                                                    <div class="input-group add">
-                                                        <label for="coso">Cơ sở</label>
-                                                        <select class="form-control" ng-model="SselectedCenter" ng-change="searchCenter()" ng-options="option.name for option in Center">
-                                                        </select>
-                                                    </div>
                                                     <div class="input-group add">
                                                         <div class="row">
                                                             <div class="col-lg-6">
