--- a/partials/home.html
+++ b/partials/home.html
@@ -42,7 +42,7 @@
                                             </div>
                                         </div>
                                         <div class="col-lg-4">
-                                            <div class="row">
+                                            <div class="row top-10">
                                                 <div class="col-lg-11">
                                                     <a href="#" class="btn btn-info btn-block" style="margin-left: 20px"
                                                         ng-click="Searchwith()">
