--- a/templates/leftmenu.html
+++ b/templates/leftmenu.html
@@ -20,7 +20,7 @@
             <li class="nav-item" ng-click="go_notcalled()" ng-class="{'active': isactive === 2}">
                 <a class="nav-link" href="">
                     <i class="material-icons">call</i>
-                    <p>Chưa gọi (0)</p>
+                    <p>Chưa gọi</p>
                 </a>
             </li>
             <li class="nav-item" ng-click="go_recall()" ng-class="{'active': isactive === 3}">
