fix home search

--- a/partials/home.html
+++ b/partials/home.html
@@ -34,7 +34,7 @@
                                                 </div>
                                                 <div class="col-lg-6">
                                                     <div class="input-group add">
-                                                        <label for="trangthai">Trạng thái</label>
+                                                        <label for="HStatus">Trạng thái</label>
                                                         <select class="form-control" ng-model="HStatus" ng-options="option.name for option in Status">
                                                         </select>
                                                     </div>
