--- a/partials/send.html
+++ b/partials/send.html
@@ -6,65 +6,52 @@
                     <div class="card-body">
                         <div class="material-datatables">
 
-                                <div class="row">
-                                        <div class="col-md-12">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="row">
+                                        <div class="col-lg-8">
                                             <div class="row">
-                                                <div class="col-lg-8">
-                                                    <div class="row">
-                                                        <div class="col-lg-6">
-                                                            <div class="input-group add">
-                                                                <label for="Sdayhen">Từ Ngày</label>
-                                                                <input type="date" class="form-control" id="Sdayhen">
-                                                            </div>
-                                                        </div>
-                                                        <div class="col-lg-6">
-                                                            <div class="input-group add">
-                                                                <label for="Sdayhen2">Đến Ngày</label>
-                                                                <input type="date" class="form-control" id="Sdayhen2">
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="row">
-                                                        <div class="col-lg-6">
-                                                            <div class="input-group add">
-                                                                <label for="giohen">Từ Giờ</label>
-                                                                <select class="form-control" ng-model="SselectedTime" ng-options="option.name for option in Appointment_time">
-                                                                </select>
-                                                            </div>
-                                                        </div>
-                                                        <div class="col-lg-6">
-                                                            <div class="input-group add">
-                                                                <label for="giohen">Đến Giờ</label>
-                                                                <select class="form-control" ng-model="SselectedTime2" ng-options="option.name for option in Appointment_time">
-                                                                </select>
-                                                            </div>
-                                                        </div>
+                                                <div class="col-lg-4">
+                                                    <div class="input-group add">
+                                                        <label for="Seregday">Từ Ngày</label>
+                                                        <input type="date" class="form-control" id="Seregday">
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-4">
                                                     <div class="input-group add">
-                                                        <label for="coso">Cơ sở</label>
-                                                        <select class="form-control" ng-model="SselectedCenter" ng-change="searchCenter()" ng-options="option.name for option in Center">
+                                                        <label for="Seregday2">Đến Ngày</label>
+                                                        <input type="date" class="form-control" id="Seregday2">
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-4">
+                                                    <div class="input-group add">
+                                                        <label for="Sesale">Sale</label>
+                                                        <select class="form-control" ng-model="Sesale" ng-options="option.name for option in Users">
                                                         </select>
                                                     </div>
-                                                    <div class="input-group add">
-                                                        <div class="row">
-                                                            <div class="col-lg-6">
-                                                                <a href="#" class="btn btn-info btn-block" style="margin-left: 20px" ng-click="Searchwith()">
-                                                                    <i class="material-icons">search</i> Tìm Kiếm
-                                                                </a>
-                                                            </div>
-                                                            <div class="col-lg-6">
-                                                                <a href="#" class="btn btn-default btn-block" ng-click="Clear()">
-                                                                    <i class="material-icons">clear_all</i> Clear
-                                                                </a>
-                                                            </div>
-                                                        </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-4">
+                                            <div class="input-group add">
+                                                <div class="row">
+                                                    <div class="col-lg-6">
+                                                        <a href="#" class="btn btn-info btn-block" style="margin-left: 20px"
+                                                            ng-click="Searchwith()">
+                                                            <i class="material-icons">search</i> Tìm Kiếm
+                                                        </a>
+                                                    </div>
+                                                    <div class="col-lg-6">
+                                                        <a href="#" class="btn btn-default btn-block" ng-click="Clear()">
+                                                            <i class="material-icons">clear_all</i> Clear
+                                                        </a>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
+                                </div>
+                            </div>
 
                             <table datatable="ng" dt-options="newdtOptions" cellpadding="0" class="table table-striped cell-border table-hover">
                                 <thead>
@@ -249,7 +236,8 @@
                                             Cập nhật
                                         </button> -->
                                         <div class="form-group">
-                                            <button class="btn btn-warning btn-block btn-lg" style="padding-left: 17px;" ng-disabled="_details.Status_student[0].id === 3" ng-click="up_detail()">Cập
+                                            <button class="btn btn-warning btn-block btn-lg" style="padding-left: 17px;"
+                                                ng-disabled="_details.Status_student[0].id === 3" ng-click="up_detail()">Cập
                                                 Nhật
                                             </button>
                                             <button class="btn btn-info btn-block">SMS</button>
@@ -265,16 +253,18 @@
             </div>
             <div class="modal-footer" style="border-top: none; padding-top: 0">
                 <div class="col-4">
-                    <button type="button" class="btn btn-block btn-lg btn-primary" ng-disabled="auth.Username !== _details.Manager[0].id" ng-click="addfriend(_details._id)">Thêm
+                    <button type="button" class="btn btn-block btn-lg btn-primary" ng-disabled="auth.Username !== _details.Manager[0].id"
+                        ng-click="addfriend(_details._id)">Thêm
                         bạn
                     </button>
                 </div>
                 <div class="col-4">
-                    <button type="button" class="btn btn-block btn-lg btn-success" ng-disabled="auth.Username !== _details.Manager[0].id  || _details.Status_student[0].id === 3" data-toggle="modal"
-                        data-target="#time">Gọi lại thời gian</button>
+                    <button type="button" class="btn btn-block btn-lg btn-success" ng-disabled="auth.Username !== _details.Manager[0].id  || _details.Status_student[0].id === 3"
+                        data-toggle="modal" data-target="#time">Gọi lại thời gian</button>
                 </div>
                 <div class="col-4">
-                    <button type="button" class="btn btn-block btn-lg btn-warning" ng-disabled="auth.Username !== _details.Manager[0].id  || _details.Status_student[0].id === 3" ng-click="recall()">Gọi lại sau</button>
+                    <button type="button" class="btn btn-block btn-lg btn-warning" ng-disabled="auth.Username !== _details.Manager[0].id  || _details.Status_student[0].id === 3"
+                        ng-click="recall()">Gọi lại sau</button>
                 </div>
             </div>
         </div>
@@ -318,7 +308,8 @@
 </div>
 
 <!-- Modal Thêm Học Viên-->
-<div class="modal fade" id="add2" tabindex="-1" role="dialog" data-backdrop="false" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="add2" tabindex="-1" role="dialog" data-backdrop="false" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog modal-add m-3-top" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -340,13 +331,15 @@
                                                 <div class="input-group-prepend add">
                                                     <label for="fullname">Họ tên</label>
                                                 </div>
-                                                <input type="text" class="form-control" ng-model="data.fullname" id="name2" required>
+                                                <input type="text" class="form-control" ng-model="data.fullname" id="name2"
+                                                    required>
                                             </div>
                                         </div>
                                         <div class="form-group">
                                             <div class="input-group add">
                                                 <label for="email">Email</label>
-                                                <input type="text" class="form-control" ng-model="data.email" id="email2" required>
+                                                <input type="text" class="form-control" ng-model="data.email" id="email2"
+                                                    required>
                                             </div>
                                         </div>
                                     </div>
@@ -354,7 +347,8 @@
                                         <div class="form-group">
                                             <div class="input-group add">
                                                 <label for="phone">Số DT</label>
-                                                <input type="number" class="form-control" ng-model="data.phone" id="phone2" required>
+                                                <input type="number" class="form-control" ng-model="data.phone" id="phone2"
+                                                    required>
                                                 <div class="input-group-prepend">
                                                     <span class="input-group-text">
                                                         <a href="">
@@ -383,13 +377,15 @@
                                         <div class="form-group">
                                             <div class="input-group add">
                                                 <label for="dayreg">Ngày đăng ký</label>
-                                                <input type="date" class="form-control datetimepicker" id="adddayreg" required>
+                                                <input type="date" class="form-control datetimepicker" id="adddayreg"
+                                                    required>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-lg-1 p-0">
                                         <div class="form-group">
-                                            <button class="btn btn-warning btn-block btn-lg" style="padding-left: 17px;" ng-click="addnewfromaddFriend(data)">Thêm
+                                            <button class="btn btn-warning btn-block btn-lg" style="padding-left: 17px;"
+                                                ng-click="addnewfromaddFriend(data)">Thêm
                                                 mới
                                             </button>
                                             <button class="btn btn-info btn-block">SMS</button>
