update search calendar

--- a/partials/calendar.html
+++ b/partials/calendar.html
@@ -11,42 +11,28 @@
                                                 <div class="row">
                                                     <div class="col-lg-8">
                                                         <div class="row">
-                                                            <div class="col-lg-6">
+                                                            <div class="col-lg-4">
                                                                 <div class="input-group add">
-                                                                    <label for="Sdayhen">Từ Ngày</label>
-                                                                    <input type="date" class="form-control" id="Sdayhen">
+                                                                    <label for="Cday">Từ Ngày</label>
+                                                                    <input type="date" class="form-control" id="Cday">
                                                                 </div>
                                                             </div>
-                                                            <div class="col-lg-6">
+                                                            <div class="col-lg-4">
                                                                 <div class="input-group add">
-                                                                    <label for="Sdayhen2">Đến Ngày</label>
-                                                                    <input type="date" class="form-control" id="Sdayhen2">
+                                                                    <label for="Cday">Đến Ngày</label>
+                                                                    <input type="date" class="form-control" id="Cday2">
                                                                 </div>
                                                             </div>
-                                                        </div>
-                                                        <div class="row">
-                                                            <div class="col-lg-6">
+                                                            <div class="col-lg-4">
                                                                 <div class="input-group add">
-                                                                    <label for="giohen">Từ Giờ</label>
-                                                                    <select class="form-control" ng-model="SselectedTime" ng-options="option.name for option in Appointment_time">
-                                                                    </select>
-                                                                </div>
-                                                            </div>
-                                                            <div class="col-lg-6">
-                                                                <div class="input-group add">
-                                                                    <label for="giohen">Đến Giờ</label>
-                                                                    <select class="form-control" ng-model="SselectedTime2" ng-options="option.name for option in Appointment_time">
+                                                                    <label for="Sesale">Sale</label>
+                                                                    <select class="form-control" ng-model="Csale" ng-options="option.name for option in Users">
                                                                     </select>
                                                                 </div>
                                                             </div>
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-4">
-                                                        <div class="input-group add">
-                                                            <label for="coso">Cơ sở</label>
-                                                            <select class="form-control" ng-model="SselectedCenter" ng-change="searchCenter()" ng-options="option.name for option in Center">
-                                                            </select>
-                                                        </div>
                                                         <div class="input-group add">
                                                             <div class="row">
                                                                 <div class="col-lg-6">
